--- a/package.json
+++ b/package.json
@@ -54,32 +54,32 @@
     "@babel/preset-env": "^7.26.0",
     "@sindresorhus/slugify": "1.1.2",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.8",    
     "babel-loader": "^9.2.1",
     "citation-js": "^0.7.16",
     "clean-css": "^5.3.3",
-    "core-js": "^3.38",
+    "core-js": "^3.39",
     "cssnano": "7.0.6",
     "debug": "^4.3.7",
     "deepmerge": "^4.3.1",
     "dotenv": "^16.4.5",
-    "eleventy-plugin-embed-everything": "^1.19.0",
     "eleventy-plugin-images-responsiver": "^3.0.0",
     "eleventy-plugin-link_to": "^0.4.1",
     "eleventy-plugin-nesting-toc": "github:mmontevil/eleventy-plugin-nesting-toc",
     "eleventy-plugin-reading-time": "^0.0.1",
     "eleventy-plugin-toc": "^1.1.5",
-    "eleventy-plugin-youtube-embed": "1.11.0",
+    "eleventy-plugin-youtube-embed": "^1.11.0",
     "entities": "^5.0.0",
     "esbuild": "^0.24.0",
     "fast-glob": "^3.3.2",
     "fast-memoize": "^2.5.2",
     "feather-icons": "^4.29.2",
-    "flat-cache": "^5.0.0",
+    "flat-cache": "^6.1.3",
     "html-minifier": "^4.0.0",
     "image-size": "^1.1.1",
     "linkedom": "0.18.5",
-    "linkify-string": "^4.1.3",
-    "linkifyjs": "^4.1.3",
+    "linkify-string": "^4.1.4",
+    "linkifyjs": "^4.1.4",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "markdown-it": "~14.1",
@@ -100,31 +100,28 @@
     "postcss-cli": "^11.0.0",
     "postcss-hash": "^3.0.0",
     "postcss-var-optimize": "^8.1.0",
-    "prettier": "^3.3.3",
-    "prettier-stylelint": "~0.4.2",
-    "purgecss": "^6.0.0",
+    "purgecss": "^7.0.2",
     "replaceall": "^0.1.6",
-    "request": "^2.88.2",
     "require-dir": "^1.2.0",
     "rimraf": "^6.0.1",
     "sanitize-html": "^2.13.1",
-    "sass": "~1.80.4",
-    "simple-icons": "~13.15.0",
+    "sass": "~1.81.0",
+    "simple-icons": "~13.18.0",
     "string-similarity": "^4.0.4",
     "svgstore": "^3.0.1",
     "to-vfile": "^8.0.0",
     "truncate-html": "^1.1.2",
     "vfile-reporter": "^8.1.1",
-    "webpack": "^5.95.0",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
-    "workbox-broadcast-update": "7.1.0",
-    "workbox-cacheable-response": "7.1.0",
-    "workbox-cli": "^7.1.0",
-    "workbox-core": "7.1.0",
-    "workbox-expiration": "7.1.0",
-    "workbox-precaching": "7.1.0",
-    "workbox-routing": "7.1.0",
-    "workbox-strategies": "7.1.0"
+    "workbox-broadcast-update": "7.3.0",
+    "workbox-cacheable-response": "7.3.0",
+    "workbox-cli": "^7.3.0",
+    "workbox-core": "7.3.0",
+    "workbox-expiration": "7.3.0",
+    "workbox-precaching": "7.3.0",
+    "workbox-routing": "7.3.0",
+    "workbox-strategies": "7.3.0"
   },
   "engines": {
     "node": ">=20"
@@ -132,9 +129,8 @@
   "private": true,
   "dependencies": {
     "bib2json": "^0.0.1",
-    "caniuse-lite": "^1.0.30001673",
+    "caniuse-lite": "^1.0.30001684",
     "cheerio": "*",
-    "eleventy-plugin-typeset": "^1.0.0",
     "npm-check": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "rehype": "^13.0.2",
