--- a/package.json
+++ b/package.json
@@ -43,40 +43,40 @@
     "c8build": "c8 npm run build && c8 --reporter=html report"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-navigation": "^1.0.4",
     "@11ty/eleventy-plugin-rss": "^2.0.4",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.1",
-    "@babel/core": "^7.27.1",
-    "@babel/preset-env": "^7.27.2",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.2",
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
     "@sindresorhus/slugify": "1.1.2",
     "autoprefixer": "^10.4.21",
-    "axios": "^1.9.0",
+    "axios": "^1.12.2",
     "babel-loader": "^10.0.0",
-    "citation-js": "^0.7.18",
+    "citation-js": "^0.7.20",
     "clean-css": "^5.3.3",
-    "core-js": "^3.42",
-    "cssnano": "7.0.7",
-    "debug": "^4.4.0",
+    "core-js": "^3.45",
+    "cssnano": "7.1.1",
+    "debug": "^4.4.3",
     "deepmerge": "^4.3.1",
-    "dotenv": "^16.5.0",
+    "dotenv": "^17.2.2",
     "eleventy-plugin-images-responsiver": "^3.0.0",
     "eleventy-plugin-link_to": "^0.4.1",
     "eleventy-plugin-nesting-toc": "github:mmontevil/eleventy-plugin-nesting-toc",
     "eleventy-plugin-reading-time": "^0.0.1",
     "eleventy-plugin-toc": "^1.1.5",
     "eleventy-plugin-youtube-embed": "^1.13.0",
-    "entities": "^6.0.0",
-    "esbuild": "^0.25.4",
+    "entities": "^7.0.0",
+    "esbuild": "^0.25.10",
     "fast-glob": "^3.3.3",
     "fast-memoize": "^2.5.2",
     "feather-icons": "^4.29.2",
-    "flat-cache": "^6.1.9",
+    "flat-cache": "^6.1.14",
     "html-minifier": "^4.0.0",
-    "image-size": "^1.1.2",
-    "linkedom": "0.18.10",
-    "linkify-string": "^4.3.1",
-    "linkifyjs": "^4.3.1",
+    "image-size": "^2.0.2",
+    "linkedom": "0.18.12",
+    "linkify-string": "^4.3.2",
+    "linkifyjs": "^4.3.2",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "markdown-it": "~14.1",
@@ -91,7 +91,7 @@
     "mathjax-full": "3.2.2",
     "modern-css-reset": "^1.4.0",
     "moment": "^2.30.1",
-    "moment-timezone": "^0.5.48",
+    "moment-timezone": "^0.6.0",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "postcss-cli": "^11.0.1",
@@ -101,15 +101,15 @@
     "replaceall": "^0.1.6",
     "require-dir": "^1.2.0",
     "rimraf": "^6.0.1",
-    "sanitize-html": "^2.16.0",
-    "sass": "~1.87.0",
-    "simple-icons": "~14.12.3",
+    "sanitize-html": "^2.17.0",
+    "sass": "~1.93.0",
+    "simple-icons": "~15.16.0",
     "string-similarity": "^4.0.4",
     "svgstore": "^3.0.1",
     "to-vfile": "^8.0.0",
-    "truncate-html": "^1.2.1",
+    "truncate-html": "^1.2.2",
     "vfile-reporter": "^8.1.1",
-    "webpack": "^5.99.8",
+    "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
     "workbox-broadcast-update": "7.3.0",
     "workbox-cacheable-response": "7.3.0",
@@ -126,10 +126,11 @@
   "private": true,
   "dependencies": {
     "bib2json": "^0.0.1",
-    "caniuse-lite": "^1.0.30001717",
+    "caniuse-lite": "^1.0.30001743",
     "cheerio": "*",
     "npm-check": "^6.0.1",
     "npm-run-all": "^4.1.5",
+    "patch-package": "^8.0.0",
     "rehype": "^13.0.2",
     "rehype-add-classes": "^1.0.0",
     "rehype-format": "^5.0.1",
