--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel start:js start:js:legacy build:sass --sequential build:eleventy ",
     "build": " NODE_ENV=production npm-run-all --sequential clean --parallel  build:js build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
     "build:netlify": " NODE_ENV=production npm-run-all --sequential clean --parallel build:js  build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
-    "webmention": "node ./_scripts/update-webmention.js",
+    "webmention": "node ./_scripts/update-webmention.cjs",
     "sprite": "node ./_scripts/generate-svg-sprite.js",
     "scholar": "node ./_scripts/scholar.js",
     "people": "node ./_scripts/updateAuthors.js",
@@ -41,10 +41,11 @@
     "build:debug": "DEBUG=Eleventy* npm run build",
     "build:benchmark": "DEBUG=Eleventy:Benchmark* npm run build",
     "start:debug": "DEBUG=Eleventy* npm start",
-    "c8build": "c8 npm run build && c8 --reporter=html report"
+    "c8build": "c8 npm run build && c8 --reporter=html report",
+    "benchmark": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy >bench.txt 2>&1"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy": "v4.0.0-alpha.6",
     "@11ty/eleventy-navigation": "^1.0.5",
     "@11ty/eleventy-plugin-rss": "^2.0.4",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.2",
@@ -56,7 +57,6 @@
     "babel-loader": "^10.0.0",
     "citation-js": "^0.7.21",
     "clean-css": "^5.3.3",
-    "core-js": "^3.47",
     "cssnano": "7.1.2",
     "debug": "^4.4.3",
     "deepmerge": "^4.3.1",
@@ -67,17 +67,11 @@
     "eleventy-plugin-reading-time": "^0.0.1",
     "eleventy-plugin-toc": "^1.1.5",
     "eleventy-plugin-youtube-embed": "^1.13.1",
-    "entities": "^7.0.0",
-    "esbuild": "^0.27.1",
-    "fast-glob": "^3.3.3",
-    "fast-memoize": "^2.5.2",
     "feather-icons": "^4.29.2",
-    "flat-cache": "^6.1.19",
     "html-minifier-next": "^4.9.2",
     "image-size": "^1.1.2",
     "linkedom": "0.18.12",
     "linkify-string": "^4.3.2",
-    "linkifyjs": "^4.3.2",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "markdown-it": "~14.1",
@@ -90,6 +84,7 @@
     "markdown-it-html5-media": "^0.8.0",
     "markdown-it-plain-text": "^0.3.0",
     "mathjax-full": "3.2.2",
+    "memoize": "^10.2.0",
     "modern-css-reset": "^1.4.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
@@ -100,7 +95,6 @@
     "postcss-var-optimize": "^8.1.0",
     "purgecss": "^7.0.2",
     "replaceall": "^0.1.6",
-    "require-dir": "^1.2.0",
     "rimraf": "^6.1.2",
     "sanitize-html": "^2.17.0",
     "sass": "~1.96.0",
@@ -122,13 +116,14 @@
     "workbox-strategies": "7.4.0"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   },
   "private": true,
   "dependencies": {
+    "@11ty/eleventy-plugin-directory-output": "^1.0.2",
     "bib2json": "^0.0.1",
-    "caniuse-lite": "^1.0.30001760",
     "cheerio": "*",
+    "esbuild": "^0.27.1",
     "npm-check": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "patch-package": "^8.0.1",
