--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "watch:eleventy": " eleventy --serve ",
     "serviceworker:inject": "workbox generateSW workbox.config.cjs",
     "start": " NODE_ENV=development npm-run-all  --sequential clean build:js  build:js:legacy --parallel watch:*",
-    "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel start:js start:js:legacy build:sass --sequential build:eleventy ",
     "build": " NODE_ENV=production npm-run-all --sequential clean --parallel  build:js build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
     "build:netlify": " NODE_ENV=production npm-run-all --sequential clean --parallel build:js  build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
     "webmention": "node ./_scripts/update-webmention.cjs",
@@ -120,7 +119,8 @@
   "dependencies": {
     "@mathjax/src": "^4.1.0",
     "bib2json": "^0.0.1",
-    "cheerio": "*",
+    "c8": "^10.1.3",
+    "cheerio": "^1.1.2",
     "dice-coefficient": "^2.1.1",
     "esbuild": "^0.27.1",
     "npm-check": "^6.0.1",
